# small-ml

./: LICENSE  README.md  small-ml.cabal  stack.yaml
src/ML/Unsupervised/: GMM.hs
src/ML/Unsupervised/Clustering/: KMeans.hs
tests/ML/Unsupervised/: GMM.hs  GMMBenchmark.hs
tests/ML/Unsupervised/Clustering/KMeans/: KMeans.hs  KMeansBenchmark.hs
