name:                small-ml
version:             0.1.0.0
synopsis:            Very basic machine learning library
-- description:
homepage:            https://github.com/asakul/small-ml#readme
license:             BSD3
license-file:        LICENSE
author:              Denis Tereshkin
maintainer:          denis@kasan.ws
copyright:           2018 Denis Tereshkin
category:            Machine learning
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ML.Unsupervised.Clustering.KMeans
                     , ML.Unsupervised.GMM
  build-depends:       base >= 4.7 && < 5
                     , hmatrix
                     , vector
                     , statistics
  default-language:    Haskell2010

executable gmm-test
  hs-source-dirs:      tests/ML/Unsupervised
  main-is:             GMM.hs
  build-depends:       base >= 4.7 && < 5
                     , small-ml
                     , hmatrix
                     , vector
                     , gloss
                     , normaldistribution
                     , random
  default-language:    Haskell2010

executable gmm-bench
  hs-source-dirs:      tests/ML/Unsupervised
  main-is:             GMMBenchmark.hs
  build-depends:       base >= 4.7 && < 5
                     , small-ml
                     , hmatrix
                     , vector
                     , normaldistribution
                     , random
                     , criterion
  default-language:    Haskell2010

executable kmeans-test
  hs-source-dirs:      tests/ML/Unsupervised/Clustering/KMeans
  main-is:             KMeans.hs
  build-depends:       base >= 4.7 && < 5
                     , small-ml
                     , hmatrix
                     , vector
                     , gloss
                     , normaldistribution
                     , random
  default-language:    Haskell2010

executable kmeans-bench
  hs-source-dirs:      tests/ML/Unsupervised/Clustering/KMeans
  main-is:             KMeansBenchmark.hs
  build-depends:       base >= 4.7 && < 5
                     , small-ml
                     , hmatrix
                     , vector
                     , normaldistribution
                     , random
                     , criterion
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/asakul/small-ml
